force-app/main/default/objects/MUSW__Mapping_Layer__c/MUSW__Mapping_Layer__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Internal - GIS layer configuration per Mapping Service</description>
    <label>Mapping Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>