force-app/main/default/objects/MUSW__Mapping_Layer__c/fields/MUSW__Mapping_Service__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapping_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapping Service</label>
    <referenceTo>MUSW__Mapping_Service__c</referenceTo>
    <relationshipName>Mapping_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>