force-app/main/default/objects/MUSW__Mapping_Layer__c/fields/MUSW__Related_Attribute__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Attribute__c</fullName>
    <label>Related Attribute</label>
    <length>100</length>
    <type>Text</type>
</CustomField>