force-app/main/default/objects/MUSW__Mapping_Layer__c/fields/MUSW__Related_Field__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Field__c</fullName>
    <label>Related Field(s)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>